SERVER-4400 don't record query plan if a client cursor yield recovery fails; this patch violates the QueryOp abstraction a bit, but we are replacing that code soon anyway